// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MemoizedProfilePic applies marginRight style to wrapper 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span
        class="CombinedStyling__Span-sc-c3jdxk-1 ProfilePicMemo__ProfilePicWrapper-sc-1w7mivj-0 gaiPyP eGrIYY"
      >
        <img
          alt="alice's profile picture"
          aria-label="alice's profile picture"
          class="ProfilePicMemo__PfpImg-sc-1w7mivj-1 dpNRyk"
          src="/alice.jpg"
        />
      </span>
    </div>
  </body>,
  "container": <div>
    <span
      class="CombinedStyling__Span-sc-c3jdxk-1 ProfilePicMemo__ProfilePicWrapper-sc-1w7mivj-0 gaiPyP eGrIYY"
    >
      <img
        alt="alice's profile picture"
        aria-label="alice's profile picture"
        class="ProfilePicMemo__PfpImg-sc-1w7mivj-1 dpNRyk"
        src="/alice.jpg"
      />
    </span>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`MemoizedProfilePic renders nothing if profile is not provided 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span
        class="CombinedStyling__Span-sc-c3jdxk-1 ProfilePicMemo__ProfilePicWrapper-sc-1w7mivj-0 MUMgs eGrIYY"
      />
    </div>
  </body>,
  "container": <div>
    <span
      class="CombinedStyling__Span-sc-c3jdxk-1 ProfilePicMemo__ProfilePicWrapper-sc-1w7mivj-0 MUMgs eGrIYY"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`MemoizedProfilePic renders profile picture with correct src and alt 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span
        class="CombinedStyling__Span-sc-c3jdxk-1 ProfilePicMemo__ProfilePicWrapper-sc-1w7mivj-0 MUMgs eGrIYY"
      >
        <img
          alt="alice's profile picture"
          aria-label="alice's profile picture"
          class="ProfilePicMemo__PfpImg-sc-1w7mivj-1 dpNRyk"
          src="/alice.jpg"
        />
      </span>
    </div>
  </body>,
  "container": <div>
    <span
      class="CombinedStyling__Span-sc-c3jdxk-1 ProfilePicMemo__ProfilePicWrapper-sc-1w7mivj-0 MUMgs eGrIYY"
    >
      <img
        alt="alice's profile picture"
        aria-label="alice's profile picture"
        class="ProfilePicMemo__PfpImg-sc-1w7mivj-1 dpNRyk"
        src="/alice.jpg"
      />
    </span>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;
